--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,11 @@
 			<version>1.15</version>
 		</dependency>
 
+		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+		</dependency>
+
 	</dependencies>
 
 	<build>
