Adding decode + Validate JWT
Decoding JWT by Base64.
Validating JWT by secretKey from application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,3 +20,5 @@ spring.kafka.producer.value-serializer=org.apache.kafka.common.serialization.Str
 
 spring.redis.host=localhost
 spring.redis.port=6379
+
+JWT_SECRET_KEY=EEET2582
